feat: Implement asynchronous processing and caching
This commit refactors the core text processing service to be asynchronous, improving API responsiveness for long-running tasks.

Key changes:
- The `/process` and `/process-file` endpoints now immediately return a job ID with a 202 Accepted response.
- A new `/results/{jobId}` endpoint allows clients to poll for the status and result of a processing job.
- Introduced a `JobStore` component to manage the state of asynchronous jobs in memory.
- Added caching with Caffeine to the `RaptorService` to avoid re-processing identical requests. The cache is configurable via `application.properties`.
- Configured a dedicated `ThreadPoolTaskExecutor` for handling the asynchronous tasks.
- Updated all relevant tests to reflect the new asynchronous API flow.